# wigner-cpp

./: CMakeLists.txt
include/wigner/: binomial.hpp  wigner.hpp  wigner_3nj.hpp
test/: CMakeLists.txt  gaunt.cpp  gaunt_j_rec.cpp  gaunt_m_rec.cpp  gaunt_table.cpp  half_integer.cpp  wigner3j_j_rec.cpp  wigner3j_m_rec.cpp
test/data/: gaunt_j_rec_lmax10  gaunt_lmax5  gaunt_m_rec_lmax10  wigner3j_j_rec_jmax10  wigner3j_m_rec_jmax10
test/scripts/: gaunt_table.py  gaunt_table_rec.py  wigner3j_table.py
